gcc/testsuite/gdc.test/compilable/imports/test19746a.d
import test19746;
class Bar: Foo { }
