gcc/testsuite/gdc.test/fail_compilation/imports/ice9865b.d
public import ice9865;
class Bar { Foo foo; }
